--- a/magda-storage-api/docker-compose.yml
+++ b/magda-storage-api/docker-compose.yml
@@ -14,6 +14,7 @@ services:
     environment:
       MINIO_ACCESS_KEY: minio
       MINIO_SECRET_KEY: minio123
+      JWT_SECRET: squirrel
     command: server /tmp
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:9000/minio/health/live"]
