--- a/deploy/helm/magda/charts/storage-api/templates/deployment.yaml
+++ b/deploy/helm/magda/charts/storage-api/templates/deployment.yaml
@@ -27,6 +27,7 @@ spec:
             "--minioEnableSSL", "false",
             "--minioHost", "magda-minio",
             "--minioPort", "9000",
+            "--authApiUrl", "http://authorization-api/v0",
         ]
         env:
         - name: MINIO_SECRET_KEY
