Add config flag to control whether or not the global notification banner is to be shown; closes #2363

--- a/deploy/helm/magda-dev.yml
+++ b/deploy/helm/magda-dev.yml
@@ -95,6 +95,7 @@ indexer:
 
 web-server:
   fallbackUrl: "https://data.gov.au"
+  showNotificationBanner: false
   featureFlags:
     cataloguing: true
   vocabularyApiEndpoints:
