--- a/deploy/helm/minikube-esri-dev.yml
+++ b/deploy/helm/minikube-esri-dev.yml
@@ -31,13 +31,14 @@ registry-api:
   skipAuthorization: false
   skipOpa: false
   recordPolicyId: "object.registry.record.esri_owner_groups"
-  
+
 correspondence-api:
   smtpPort: 2525
   smtpHostname: "smtp.mailgun.org"
-  
+
 web-server:
   fallbackUrl: "https://data.gov.au"
+  showNotificationBanner: false
   featureFlags:
     cataloguing: true
 
