--- a/deploy/helm/preview.yml
+++ b/deploy/helm/preview.yml
@@ -82,6 +82,7 @@ indexer:
 
 web-server:
   fallbackUrl: "https://data.gov.au"
+  showNotificationBanner: false
   featureFlags:
     cataloguing: true
   vocabularyApiEndpoints:
