--- a/deploy/helm/magda/charts/web-server/templates/configmap.yaml
+++ b/deploy/helm/magda/charts/web-server/templates/configmap.yaml
@@ -8,7 +8,7 @@ data:
     {{- if .Values.fallbackUrl -}} "fallbackUrl": {{ .Values.fallbackUrl | quote }}, {{- end -}}
     {{- if .Values.contentApiBaseUrlInternal -}} "contentApiBaseUrlInternal": {{ .Values.contentApiBaseUrlInternal | quote }}, {{- end -}}
     {{- if .Values.defaultOrganizationId -}} "defaultOrganizationId": {{ .Values.defaultOrganizationId | quote }}, {{- end -}}
-    "showNotificationBanner": {{ .Values.showNotificationBanner }}
+    "showNotificationBanner": {{ .Values.showNotificationBanner }},
     "disableAuthenticationFeatures": {{ .Values.disableAuthenticationFeatures }},
     "baseUrl": {{ .Values.baseUrl | default "/" | quote }},
     "featureFlags": {{ toJson .Values.featureFlags | quote }},
