Add showNotificationBanner flag to values.yaml instead

--- a/deploy/helm/magda/charts/web-server/values.yaml
+++ b/deploy/helm/magda/charts/web-server/values.yaml
@@ -14,6 +14,7 @@ resources:
   limits:
     cpu: 100m
 disableAuthenticationFeatures: false
+showNotificationBanner: false
 service: {}
 useLocalStyleSheet: false
 contentApiBaseUrlInternal: "http://content-api/v0/"
