Set storage auth:true in gateway helm config

--- a/deploy/helm/magda/charts/gateway/values.yaml
+++ b/deploy/helm/magda/charts/gateway/values.yaml
@@ -53,6 +53,7 @@ defaultRoutes:
     auth: true
   storage:
     to: http://storage-api/v0
+    auth: true
   correspondence:
     to: http://correspondence-api/v0/public
   apidocs:
