Added registry authorization integration tests to ci build

--- a/magda-registry-api/src/main/resources/application.conf
+++ b/magda-registry-api/src/main/resources/application.conf
@@ -77,7 +77,7 @@ authApi {
 }
 
 opa {
-    baseUrl = "http://localhost:6104/v0/opa"
+    baseUrl = ${authApi.baseUrl}"/v0/opa"
     recordPolicyId = "object.registry.record.owner_orgunit"
 }
 
