add package minion-sdk bundle setup

--- a/magda-minion-framework/package.json
+++ b/magda-minion-framework/package.json
@@ -59,5 +59,8 @@
   },
   "_moduleMappings": {
     "magda-typescript-common/src": "@magda/typescript-common/dist"
-  }
+  },
+  "files": [
+    "dist"
+  ]
 }
