--- a/packages/minion-sdk/tsconfig.json
+++ b/packages/minion-sdk/tsconfig.json
@@ -1,6 +1,7 @@
 {
     "extends": "../../tsconfig-global.json",
     "compilerOptions": {
+        "target": "ES5",
         "outDir": "./dist",
         "strictNullChecks": false,
         "rootDir": "./src",
