bundle connector-sdk & connect-test-utils

--- a/magda-minion-framework/package.json
+++ b/magda-minion-framework/package.json
@@ -54,7 +54,8 @@
     "language": "typescript",
     "categories": {
       "minion": true,
-      "library": true
+      "library": true,
+      "npmPackage": true
     }
   },
   "_moduleMappings": {
