--- a/magda-typescript-common/package.json
+++ b/magda-typescript-common/package.json
@@ -71,7 +71,8 @@
   "magda": {
     "language": "typescript",
     "categories": {
-      "library": true
+      "library": true,
+      "npmPackage": true
     }
   },
   "nyc": {
