--- a/packages/minion-sdk/package.json
+++ b/packages/minion-sdk/package.json
@@ -12,6 +12,7 @@
   "types": "dist/index.d.ts",
   "devDependencies": {
     "@magda/minion-framework": "^0.0.57-0",
+    "@magda/typescript-common": "^0.0.57-0",
     "@microsoft/api-extractor": "^7.7.8",
     "typescript": "^3.7.2",
     "webpack": "^4.41.2",
@@ -25,7 +26,7 @@
   "magda": {
     "language": "typescript",
     "categories": {
-      "package": true
+      "npmPackage": true
     }
   },
   "files": [
