--- a/magda-typescript-common/package.json
+++ b/magda-typescript-common/package.json
@@ -46,6 +46,7 @@
   },
   "dependencies": {
     "@types/request": "^2.48.1",
+    "@types/resolve": "^1.14.0",
     "body-parser": "^1.18.2",
     "express": "^4.16.3",
     "isomorphic-fetch": "^2.2.1",
@@ -55,6 +56,7 @@
     "moment": "^2.17.1",
     "read-pkg-up": "^3.0.0",
     "request": "^2.88.0",
+    "resolve": "^1.15.0",
     "tsmonad": "^0.7.2",
     "urijs": "^1.18.12",
     "uuid": "^3.1.0",
