--- a/packages/connector-sdk/package.json
+++ b/packages/connector-sdk/package.json
@@ -27,6 +27,11 @@
       "npmPackage": true
     }
   },
+  "keywords": [
+    "Magda",
+    "Connector",
+    "SDK"
+  ],
   "files": [
     "dist"
   ]
