--- a/packages/minion-sdk/package.json
+++ b/packages/minion-sdk/package.json
@@ -29,6 +29,11 @@
       "npmPackage": true
     }
   },
+  "keywords": [
+    "Magda",
+    "Minion",
+    "SDK"
+  ],
   "files": [
     "dist"
   ]
