--- a/magda-minion-framework/package.json
+++ b/magda-minion-framework/package.json
@@ -54,8 +54,7 @@
     "language": "typescript",
     "categories": {
       "minion": true,
-      "library": true,
-      "npmPackage": true
+      "library": true
     }
   },
   "_moduleMappings": {
