--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -1,15 +1,17 @@
 {
   "name": "@magda/utils",
   "description": "MAGDA Common Utils",
-  "version": "0.0.57-0-beta-0",
+  "version": "0.0.57-0-beta-2",
   "scripts": {
     "prebuild": "rimraf dist tsconfig.tsbuildinfo",
-    "build": "webpack && api-extractor run -l"
+    "compile": "webpack && api-extractor run -l",
+    "compile-web": "webpack --env.target=web && api-extractor run -c api-extractor-web.json -l",
+    "build": "yarn compile && yarn compile-web"
   },
   "author": "",
   "license": "Apache-2.0",
   "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "browser": "dist/index-web.js",
   "devDependencies": {
     "@magda/typescript-common": "^0.0.57-0",
     "@microsoft/api-extractor": "^7.7.8",
