--- a/magda-storage-api/package.json
+++ b/magda-storage-api/package.json
@@ -22,6 +22,7 @@
     "@types/superagent": "^4.1.4",
     "@types/xmldom": "^0.1.29",
     "express": "^4.13.1",
+    "express-multipart-file-parser": "^0.1.2",
     "lru-cache": "^5.1.1",
     "minio": "^7.0.12",
     "urijs": "^1.19.2",
