Make uploadLimit configurable

--- a/deploy/helm/magda/charts/storage-api/templates/deployment.yaml
+++ b/deploy/helm/magda/charts/storage-api/templates/deployment.yaml
@@ -28,6 +28,7 @@ spec:
             "--minioHost", "magda-minio",
             "--minioPort", "9000",
             "--authApiUrl", "http://authorization-api/v0",
+            "--uploadLimit", "100mb",
         ]
         env:
         - name: MINIO_SECRET_KEY
