--- a/magda-minion-framework/package.json
+++ b/magda-minion-framework/package.json
@@ -7,7 +7,9 @@
     "build": "yarn run compile",
     "compile": "tsc -b && ts-module-alias-transformer dist",
     "watch": "tsc -b --watch",
-    "test": "mocha --compilers ts:ts-node/register,tsx:ts-node/register --require tsconfig-paths/register \"src/test/**/*.spec.ts\""
+    "test": "mocha --compilers ts:ts-node/register,tsx:ts-node/register --require tsconfig-paths/register \"src/test/**/*.spec.ts\"",
+    "npm-setup": "echo \"//registry.npmjs.org/:_authToken=${NPM_TOKEN}\" > .npmrc",
+    "release": "npm publish --dry-run || echo \"Skip releasing npm package @magda/minion-framework.\""
   },
   "author": "",
   "license": "Apache-2.0",
