--- a/magda-registry-aspects/package.json
+++ b/magda-registry-aspects/package.json
@@ -3,7 +3,9 @@
   "version": "0.0.57-0",
   "description": "Common aspects for use with the registry.",
   "scripts": {
-    "build": "echo \"ok\""
+    "build": "echo \"ok\"",
+    "npm-setup": "echo \"//registry.npmjs.org/:_authToken=${NPM_TOKEN}\" > .npmrc",
+    "release": "npm publish --dry-run || echo \"Skip releasing npm package @magda/registry-aspects.\""
   },
   "author": "",
   "license": "Apache-2.0",
