--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -6,7 +6,9 @@
     "prebuild": "rimraf dist tsconfig.tsbuildinfo",
     "compile": "webpack && webpack --env.target=web",
     "dts-rollup": "api-extractor run -l && api-extractor run -c api-extractor-web.json -l",
-    "build": "yarn compile && yarn dts-rollup"
+    "build": "yarn compile && yarn dts-rollup",
+    "npm-setup": "echo \"//registry.npmjs.org/:_authToken=${NPM_TOKEN}\" > .npmrc",
+    "release": "npm publish --dry-run || echo \"Skip releasing npm package @magda/utils.\""
   },
   "author": "",
   "license": "Apache-2.0",
@@ -25,7 +27,8 @@
   "magda": {
     "language": "typescript",
     "categories": {
-      "npmPackage": true
+      "npmPackage": true,
+      "useCommonLib": true
     }
   },
   "files": [
