--- a/scripts/package.json
+++ b/scripts/package.json
@@ -19,7 +19,9 @@
     "acs-cmd": "acs-cmd/index.js"
   },
   "scripts": {
-    "build": "echo \"ok\""
+    "build": "echo \"ok\"",
+    "npm-setup": "echo \"//registry.npmjs.org/:_authToken=${NPM_TOKEN}\" > .npmrc",
+    "release": "npm publish --dry-run || echo \"Skip releasing npm package @magda/scripts.\""
   },
   "devDependencies": {
     "@types/pg": "^7.4.14",
