--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,7 +9,7 @@ variables:
     -Dsbt.ivy.home=$CI_PROJECT_DIR/sbt-cache/ivy
   # If you changed dependencies (especially for scala), you might want to prevent your branch from using old cache by increase the version blew
   # gitlab actually use the same technique when you click the `Clear Cache Button`
-  CACHE_VERSION: ts-7-scala-5
+  CACHE_VERSION: ts-8-scala-5
 
 stages:
   - builders
@@ -42,6 +42,7 @@ builders-and-yarn:
     paths:
       - "node_modules"
       - "*/node_modules"
+      - "packages/*/node_modules"
       - "yarn.lock"
     expire_in: 7 days
 
