make sure npm packages build result is not missing from artifacts

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -326,6 +326,7 @@ buildtest:typescript-apis:
   artifacts:
     paths:
       - "*/dist"
+      - "packages/*/dist"
     expire_in: 7 days
 
 buildtest:storage-api:
