--- a/deploy/helm/magda-core/charts/correspondence-api/values.yaml
+++ b/deploy/helm/magda-core/charts/correspondence-api/values.yaml
@@ -6,5 +6,6 @@ resources:
   limits:
     cpu: 50m
 smtpPort: 587
+smtpHostname: "example.com"
 defaultRecipient: "mail@example.com"
 alwaysSendToDefaultRecipient: false
