--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -382,6 +382,29 @@ buildtest:opa-policies:
   script:
     - docker run -v $PWD/deploy/helm/magda/charts/opa/policies:/policies openpolicyagent/opa:0.10.7 test -v ./policies
 
+buildtest:helm-charts:
+  stage: buildtest
+  image: dtzar/helm-kubectl:2.16.1
+  cache:
+    paths: []
+  script:
+    # Init helm
+    - helm init --client-only
+    - helm repo add magda-io https://charts.magda.io
+    - helm dep up deploy/helm/magda
+
+    - echo "helm lint magda chart using magda-dev.yml"
+    - helm lint -f deploy/helm/magda-dev.yml deploy/helm/magda
+
+    - echo "helm lint magda chart using minikube-dev.yml"
+    - helm lint -f deploy/helm/minikube-dev.yml deploy/helm/magda
+
+    - echo "helm lint magda chart using preview.yml"
+    - helm lint -f deploy/helm/preview.yml deploy/helm/magda
+    
+    - echo "helm lint magda chart using preview-multi-tenant.yml"
+    - helm lint -f deploy/helm/preview-multi-tenant.yml deploy/helm/magda
+
 dockerize:scala:
   stage: dockerize
   image: registry.gitlab.com/magda-data/magda/data61/magda-builder-scala:$CI_COMMIT_REF_SLUG
