--- a/deploy/helm/magda/values.yaml
+++ b/deploy/helm/magda/values.yaml
@@ -1,6 +1,7 @@
 tags:
   all: true
   connectors: false
+  connector-esri-nsw: false
   minion-broken-link: false
   minion-linked-data-rating: false
   minion-visualization: false
