--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -316,11 +316,12 @@ buildtest:typescript-apis:
     - cd deploy/helm/magda-core/charts/opa
     - docker-compose up -d
     - cd ../../../../..
+    - cd magda-typescript-common && yarn build && yarn test && cd ..
+    - cd magda-minion-framework && yarn build && yarn test && cd ..
     - yarn run in-submodules -- -f categories.api=true -f categories.testStandAlone=false -f language=typescript -- run build --include-filtered-dependencies
     - yarn run in-submodules -- -f categories.api=true -f categories.testStandAlone=false -f language=typescript -- run test --include-filtered-dependencies
-    - cd magda-typescript-common && yarn test && cd ..
-    - yarn run in-submodules -- -f categories.npmPackage=true -f categories.useCommonLib=true -- run build --include-filtered-dependencies
-    - yarn run in-submodules -- -f categories.npmPackage=true -f categories.useMinionLib=true -- run build --include-filtered-dependencies
+    - yarn run in-submodules -- -f categories.npmPackage=true -f categories.useCommonLib=true -- run build
+    - yarn run in-submodules -- -f categories.npmPackage=true -f categories.useMinionLib=true -- run build
     - cd deploy/helm/magda-core/charts/opa
     - docker-compose down
   artifacts:
