--- a/magda-web-client/package.json
+++ b/magda-web-client/package.json
@@ -62,7 +62,8 @@
     "rrule": "^2.6.2",
     "source-map-explorer": "^1.7.0",
     "urijs": "^1.19.1",
-    "use-debounce": "^3.3.0"
+    "use-debounce": "^3.3.0",
+    "xlsx": "^0.14.0"
   },
   "devDependencies": {
     "@craco/craco": "^5.0.2",
