--- a/magda-registry-aspects/package.json
+++ b/magda-registry-aspects/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "build": "echo \"ok\"",
     "npm-setup": "echo \"//registry.npmjs.org/:_authToken=${NPM_TOKEN}\" > .npmrc",
-    "release": "npm publish --dry-run || echo \"Skip releasing npm package @magda/registry-aspects.\""
+    "release": "npm publish || echo \"Skip releasing npm package @magda/registry-aspects.\""
   },
   "author": "",
   "license": "Apache-2.0",
