--- a/magda-typescript-common/package.json
+++ b/magda-typescript-common/package.json
@@ -15,7 +15,7 @@
     "create_esri_groups_owner_jwt": "nyc mocha --compilers ts:ts-node/register,tsx:ts-node/register --require tsconfig-paths/register \"src/test/**/buildJwtForRegistryEsriOpaGroupsAndOwnerTest.ts\"",
     "dev": "yarn run watch",
     "npm-setup": "echo \"//registry.npmjs.org/:_authToken=${NPM_TOKEN}\" > .npmrc",
-    "release": "npm publish --dry-run || echo \"Skip releasing npm package @magda/typescript-common.\""
+    "release": "npm publish || echo \"Skip releasing npm package @magda/typescript-common.\""
   },
   "devDependencies": {
     "@magda/registry-aspects": "^0.0.57-0",
