--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -1,14 +1,14 @@
 {
   "name": "@magda/utils",
   "description": "MAGDA Common Utils",
-  "version": "0.0.57-0-beta-5",
+  "version": "0.0.57-0",
   "scripts": {
     "prebuild": "rimraf dist tsconfig.tsbuildinfo",
     "compile": "webpack && webpack --env.target=web",
     "dts-rollup": "api-extractor run -l && api-extractor run -c api-extractor-web.json -l",
     "build": "yarn compile && yarn dts-rollup",
     "npm-setup": "echo \"//registry.npmjs.org/:_authToken=${NPM_TOKEN}\" > .npmrc",
-    "release": "npm publish --dry-run || echo \"Skip releasing npm package @magda/utils.\""
+    "release": "npm publish || echo \"Skip releasing npm package @magda/utils.\""
   },
   "author": "",
   "license": "Apache-2.0",
