- Use `helm dep build` instead of `helm dep up` avoid issues - Update the documents accordingly

--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,6 @@ magda-tenant-api/lib/
 
 #typescript
 tsconfig.tsbuildinfo
+
+# Ignore Magda helm chart auto build dependencies
+deploy/helm/magda/charts
