--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -395,7 +395,7 @@ buildtest:helm-charts:
     # Init helm
     - helm init --client-only
     - helm repo add magda-io https://charts.magda.io
-    - helm dep up deploy/helm/magda
+    - helm dep build deploy/helm/magda
 
     - echo "helm lint magda chart using magda-dev.yml"
     - helm lint -f deploy/helm/magda-dev.yml deploy/helm/magda
