Added tags for minio

--- a/deploy/helm/magda-core/requirements.yaml
+++ b/deploy/helm/magda-core/requirements.yaml
@@ -71,6 +71,10 @@ dependencies:
     tags:
       - all
       - opa
+  - name: minio
+    tags:
+      - all
+      - storage-api
   - name: storage-api
     tags:
       - all
