--- a/magda-web-client/package.json
+++ b/magda-web-client/package.json
@@ -42,6 +42,7 @@
     "crc-32": "^1.2.0",
     "debounce-promise": "^3.1.2",
     "i18next": "^11.10.1",
+    "is-url": "^1.2.4",
     "is-url-external": "^1.0.3",
     "leaflet": "^0.7.7",
     "mammoth": "^1.4.7",
