--- a/deploy/helm/magda-core/charts/cloud-sql-proxy/templates/deployment.yaml
+++ b/deploy/helm/magda-core/charts/cloud-sql-proxy/templates/deployment.yaml
@@ -1,5 +1,5 @@
 {{- if .Values.global.useCloudSql }}
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: cloud-sql-proxy
