--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,7 @@ magda-tenant-api/lib/
 
 #typescript
 tsconfig.tsbuildinfo
+
+# Helm chart installations
+deploy/helm/magda/charts/
+deploy/helm/magda/requirements.lock
